--- a/index.html
+++ b/index.html
@@ -177,11 +177,12 @@
             background: #ff4444;
             color: white;
             border: none;
-            border-radius: 6px;
-            padding: 6px 12px;
+            border-radius: 4px;
+            padding: 4px 8px;
             cursor: pointer;
-            font-size: 12px;
+            font-size: 11px;
             transition: opacity 0.2s;
+            min-width: auto;
         }
 
         .grocery-delete-btn:hover {
